--- a/website-project/resources/css/detailsPage.css
+++ b/website-project/resources/css/detailsPage.css
@@ -34,7 +34,18 @@
 
 * {
 	font-family: "Montserrat", sans-serif;
-	/* background-color: grey; */
+}
+
+html,
+body {
+	height: 100%;
+	/* background-color: rgb(189, 189, 189); */
+}
+
+.wrapper {
+	background-color: white;
+	height: 100%;
+	margin: 0px 30px;
 }
 
 .navigatePath a {
@@ -44,12 +55,16 @@
 }
 
 .imageDiv {
-	max-height: 500px;
-	max-width: 500px;
+	background-color: black;
+	height: 500px;
 }
 
-.imageDiv img {
-	margin: auto;
+.imageDiv > img {
+	width: 100%;
+	height: 100%;
+
+	object-fit: cover;
+	overflow: hidden;
 }
 
 .carousel-indicators li {
@@ -86,12 +101,12 @@
 .currentAmount,
 .increaseOne {
 	display: inline-block;
-	width: 2rem;
-	height: 2rem;
+	width: 2.5rem;
+	height: 2.5rem;
 
 	text-align: center;
 
-	line-height: 2rem;
+	line-height: 2.5rem;
 
 	font-family: "Raleway", sans-serif;
 	font-weight: bold;
@@ -105,4 +120,52 @@
 .decreaseOne:hover,
 .increaseOne:hover {
 	background-color: var(--lightTomato);
+	cursor: pointer;
+}
+
+.tittleText {
+	font-size: 1.5rem;
+	text-decoration: underline;
+}
+
+.option {
+	text-align: center;
+	font-size: x-large;
+	font-weight: bold;
+	color: var(--lightTomato);
+
+	padding: 15px 0;
+	margin: 0px 4px;
+	/* height: 3rem; */
+
+	border-style: solid;
+	border-color: var(--lightTomato);
+	border-width: 3px;
+}
+
+.option:hover {
+	color: white;
+	background-color: var(--lightTomato);
+	cursor: pointer;
+}
+
+.descriptionText {
+	height: 8rem;
+	white-space: normal;
+	overflow-x: hidden;
+
+	border-style: solid;
+	border-color: var(--lightTomato);
+	border-width: 2px;
+
+	padding: 0px 0.5rem;
+}
+
+.addToCartButton {
+	font-family: "Roboto Slab", serif;
+	font-weight: bold;
+	color: white;
+
+	text-transform: uppercase;
+	background-color: var(--deepViolet);
 }
