--- a/website-project/resources/css/styles.css
+++ b/website-project/resources/css/styles.css
@@ -25,73 +25,226 @@ ul {
   color: white;
 }
 
-.header .header-infor-top .header-address-contact i,
-.header .header-infor-top .header-address-contact a {
+.header-infor-top .header-address-contact i,
+.header-infor-top .header-address-contact a {
   color: white !important;
   text-decoration: none;
 }
 
-.header .header-infor-top .header-address-contact i {
+.header-infor-top .header-address-contact i {
   margin: 0 5px 0px 30px;
 }
 
-.header .header-infor-top .header-icon-contact i {
+.header-infor-top .header-icon-contact i {
   margin: 0 5px 0px 5px;
 }
 
-.header nav a {
+.header-icon-contact ul li {
+  margin: 0 10px;
+}
+
+.header-nav-bar {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.header-nav-bar {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  height: 3.5rem;
+  z-index: 1000;
+}
+
+.nav-bar-menu {
+  max-width: 65rem;
+  padding: 0 2rem;
+  height: 100%;
+  display: flex;
+  position: relative;
+}
+
+.logo-brand {
+  flex: 2;
+  display: flex;
+  align-items: center;
+}
+
+.nav-menu {
+  flex: 9;
+  display: flex;
+}
+
+.nav-link-menu {
+  flex: 3;
+}
+
+.logo-brand h3 {
+  padding-left: 1rem;
+  color: rgb(19, 2, 94);
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 3.5rem;
+  margin: 0;
+}
+
+.nav-btn {
+  flex: 1;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.nav-link-menu > ul {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.nav-link-menu a {
+  text-decoration: none !important;
+  color: black !important;
+}
+
+.nav-link-menu li#sales a {
+  color: rgb(255, 0, 0) !important;
+  font-weight: bold !important;
+  font-size: large;
+}
+
+.nav-link > a {
+  line-height: 3.5rem;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.2s;
+}
+
+.nav-link > a > i {
+  margin-left: 0.3rem;
+}
+
+.nav-link:hover > a {
+  color: rgb(248, 122, 3) !important;
+  font-weight: bold;
+  transform: scale(1.1);
+  text-shadow: 1px 1px 2px rgb(27, 0, 0);
+}
+
+.nav-link-menu .nav-link {
+  position: relative;
+}
+
+.nav-link-menu .nav-link .dropdown {
+  position: absolute;
+  top: 100% - 5px;
+  left: 0;
+  width: 10rem;
+  background-color: white;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.nav-link-menu .nav-link:hover > .dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.nav-link-menu .nav-link .dropdown ul {
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.nav-link-menu .nav-link .dropdown .drop-link > a {
+  display: flex;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  transform: 0.3s;
+}
+
+.nav-link-menu .nav-link .dropdown .drop-link:hover > a {
+  background-color: #abebf7;
+}
+
+.nav-link-menu .nav-link .dropdown .drop-link:not(:nth-last-child(2)) {
+  border-bottom: 1px solid #efefef;
+}
+
+.arrow {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: -5.5px;
+  left: 32px;
+  background-color: #fff;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+.nav-link-menu .nav-link .dropdown .drop-link:first-child:hover ~ .arrow {
+  background-color: #abebf7;
+}
+
+#search-btn,
+#account-btn,
+#cart-btn {
+  flex: 1;
+  margin: 0 !important;
+  padding: 0 !important;
+  font-size: 2rem;
+}
+
+#search-btn,
+#account-btn {
+  font-size: 1.5rem;
+}
+
+#cart-btn {
+  padding: 2px !important;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#cart-btn i,
+#cart-btn p {
+  flex: 1;
+  font-size: 50%;
   padding: 0;
   margin: 0;
 }
 
-#nav-sales:link,
-#nav-sales:visited {
-  color: #f88a03 !important;
-}
-
-#nav-sales:hover {
-  color: #fc4e19 !important;
-}
-
-#account-btn,
-#search-btn {
-  padding: 0;
-}
-
-#cart-btn {
-  height: 100%;
-  padding: 8px 9px 6px 6px;
-}
-
-#account-btn i,
-#search-btn i,
 #cart-btn i {
-  font-size: 20px;
+  font-size: 70%;
+  padding-top: 5px;
 }
 
-#cart-btn:hover {
-  background-color: red !important;
-}
-
-#account-btn i:hover,
-#search-btn i:hover {
+#search-btn:hover,
+#account-btn i:hover {
   color: #ffa538 !important;
 }
 
-nav ul li a {
-  color: rgb(0, 0, 0) !important;
+#cart-btn {
+  color: #fff;
 }
 
-nav ul li.nav-item a:hover {
-  color: #f88a03 !important;
-}
-
-nav ul li.nav-item a.dropdown-item:hover {
-  color: #f79a2a !important;
-}
-
-.navbar-nav > li {
-  margin: 0 10px;
+#cart-btn:hover,
+#cart-btn:hover i {
+  color: #ffa538 !important;
 }
 
 /* Footer */
