--- a/website-project/resources/css/styles.css
+++ b/website-project/resources/css/styles.css
@@ -43,8 +43,18 @@ ul {
   margin: 0 10px;
 }
 
+.btn-search-active,
+.btn-close-search-active {
+  background-color: white;
+}
+
+.btn-search-active:hover i,
+.btn-close-search-active:hover i {
+  color: rgb(248, 122, 3) !important;
+}
+
 .header-nav-bar {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 1px 0 rgba(165, 165, 165, 0.2);
 }
 
 .header-nav-bar {
@@ -54,6 +64,11 @@ ul {
   width: 100%;
   height: 3.5rem;
   z-index: 1000;
+  background-color: #f1f1f1;
+}
+
+.search-form-active {
+  display: none;
 }
 
 .nav-bar-menu {
@@ -182,7 +197,7 @@ ul {
   border-bottom: 1px solid #efefef;
 }
 
-.arrow {
+.arrow-menu {
   position: absolute;
   width: 11px;
   height: 11px;
@@ -193,7 +208,7 @@ ul {
   cursor: pointer;
 }
 
-.nav-link-menu .nav-link .dropdown .drop-link:first-child:hover ~ .arrow {
+.nav-link-menu .nav-link .dropdown .drop-link:first-child:hover ~ .arrow-menu {
   background-color: #abebf7;
 }
 
@@ -259,4 +274,8 @@ ul {
 
 .footer .footer-menu li a:hover {
   color: #ffa538 !important;
+}
+
+.footer .footer-menu {
+  background-color: #f1f1f1;
 }
