--- a/website-project/resources/css/styles.css
+++ b/website-project/resources/css/styles.css
@@ -279,3 +279,8 @@ ul {
 .footer .footer-menu {
   background-color: #f1f1f1;
 }
+
+.body-content {
+  width: 80%;
+  padding: 3rem 0 3rem 0 !important;
+}
