--- a/Views/Layouts/default-layout.hbs
+++ b/Views/Layouts/default-layout.hbs
@@ -14,19 +14,28 @@
   <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
 
   <!-- Style CSS -->
-  <link rel="stylesheet" href="./resources/css/styles.css">
-  <link rel="stylesheet" href="./resources/css/index.css">
+  <!-- Paste Style Here -->
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
 
 <body>
-    
 
-    {{>bootstrap-script}}
+  <!-- Place Header -->
+  {{> header}}
 
-    {{{body}}}
+  <!-- Place Body Content -->
+  {{{body}}}
+
+  <!-- Place Footer -->
+  {{>footer}}
+
+  <!-- Place Boostrap & Script JS -->
+  {{>bootstrap-script}}
+
 </body>
+
 </html>
