--- a/Views/Layouts/item-detail-layout.hbs
+++ b/Views/Layouts/item-detail-layout.hbs
@@ -1,47 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>USG</title>
 
-<head>
-  <title>USG</title>
-  <link rel="shortcut icon" href="resources/img/web.ico" type="image/x-icon">
+		{{> head}}
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Universal Simplistic Grocery">
+		<link rel="stylesheet" href="../resources/css/item-detail.css" />
+	</head>
 
-  <!-- Icons-->
-  <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
+	<body>
+		{{>header}}
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		{{{body}}}
 
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="../resources/css/styles.css">
-  <link rel="stylesheet" href="../resources/css/item-detail.css">
+		{{>footer}}
 
-</head>
+		{{> bootstrap-script}}
 
-<body>
-
-  {{{body}}}
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
-
-
-
-  <script>
-    document.title = document.querySelector(".item-name").innerHTML;
-  </script>
-</body>
-
+		<script>
+			document.title = document.querySelector(".item-name").innerHTML;
+		</script>
+	</body>
 </html>
