--- a/resources/css/shopping-cart.css
+++ b/resources/css/shopping-cart.css
@@ -57,103 +57,95 @@ textarea {
 	padding: 0px;
 }
 
-.formTittle {
+.form-tittle {
 	font-family: "Roboto Slab", serif;
-	font-size: 2rem;
+	font-size: 1.2rem;
 	font-weight: bold;
 	color: var(--deepViolet);
 
 	margin: 3px 0px;
 }
 
-.chosenItemDiv {
-	height: 80vh;
-	overflow-y: scroll;
+.chosen-item-div {
+	height: 70vh;
+	overflow-y: auto;
 	overflow-x: hidden;
 
 	border-style: dashed;
 	border-width: 1px;
+	border-radius: 5px;
 
 	/* box-shadow: 2px 2px 10px grey; */
 }
 
-.itemDiv {
+.item-div {
 	background-color: white;
 	border-style: solid;
 	border-width: 1px;
+	border-radius: 5px;
 
 	box-shadow: 2px 2px 10px grey;
 }
 
-.itemDiv img {
+.item-div img {
 	object-fit: cover;
 	overflow: hidden;
 }
 
-.priceTag {
+.price {
 	font-family: "Raleway", sans-serif;
+	font-size: medium;
+	text-align: right;
 }
 
-.decreaseOne,
-.currentAmount,
-.increaseOne {
-	font-size: 1rem;
-	width: 2rem;
-	height: 2rem;
-	line-height: 2rem;
-}
-
-.itemName {
+.total-price {
+	font-family: "Raleway", sans-serif;
+	font-size: medium;
 	text-align: right;
 	font-size: large;
 	font-weight: bold;
 }
 
-.priceTag {
-	text-align: right;
+.item-name {
+	font-size: large;
+	font-weight: bold;
 }
 
-/* For mobile phones: */
-[class*="col-"] {
-	width: 100%;
+.decrease-one,
+.amount,
+.increase-one {
+	display: inline-block;
+	width: 1.5rem;
+	height: 1.5rem;
+	line-height: 1.5rem;
+
+	text-align: center;
+
+	font-family: "Raleway", sans-serif;
+	font-weight: bold;
+	font-size: 1rem;
+
+	border-style: solid;
+	border-color: var(--lightTomato);
+	border-width: 1px;
 }
 
-@media only screen and (min-width: 768px) {
-	/* For desktop: */
-	.col-1 {
-		width: 8.33%;
-	}
-	.col-2 {
-		width: 16.66%;
-	}
-	.col-3 {
-		width: 25%;
-	}
-	.col-4 {
-		width: 33.33%;
-	}
-	.col-5 {
-		width: 41.66%;
-	}
-	.col-6 {
-		width: 50%;
-	}
-	.col-7 {
-		width: 58.33%;
-	}
-	.col-8 {
-		width: 66.66%;
-	}
-	.col-9 {
-		width: 75%;
-	}
-	.col-10 {
-		width: 83.33%;
-	}
-	.col-11 {
-		width: 91.66%;
-	}
-	.col-12 {
-		width: 100%;
-	}
+.decrease-one:hover,
+.increase-one:hover {
+	background-color: var(--lightTomato);
+	cursor: pointer;
+}
+
+.option {
+	height: 3rem;
+	/* line-height: 3rem; */
+}
+
+.confirm-btn {
+	font-family: "Roboto Slab", serif;
+	font-weight: bold;
+	color: white;
+
+	text-transform: uppercase;
+	background-color: var(--deepViolet);
 }
