--- a/Views/index.hbs
+++ b/Views/index.hbs
@@ -1,142 +1,181 @@
 <!-- Body -->
 <a href="#">
-    <img class="img-banner" src="resources/img/banner/bannerBF.jpg" alt="banner">
+	<img
+		class="img-banner"
+		src="resources/img/banner/bannerBF.jpg"
+		alt="banner"
+	/>
 </a>
 
 <div class="body-content container">
+	<!-- Shortcut Secsion -->
+	<div class="secsion-first--shortcut container">
+		<div class="row">
+			<div class="col-6 col-lg-3 p-0 pr-2">
+				<div class="img-shortcut">
+					<a href="/best-seller">
+						<img
+							class="rounded"
+							src="resources/img/product/shortcut/best-seller.png"
+							alt=""
+							width="100%"
+						/>
+						<div class="content-shortcut rounded">
+							<h1>BEST SELLER</h1>
+							<h4>Khách hàng tin dùng</h4>
+						</div>
+					</a>
+				</div>
+				<p class="des-shortcut">Thịnh Hành</p>
+			</div>
 
-    <!-- Shortcut Secsion -->
-    <div class="secsion-first--shortcut container">
-        <div class="row">
+			<div class="col-6 col-lg-3 p-0 pl-2 px-lg-1">
+				<div class="img-shortcut">
+					<a href="/new-arrival">
+						<img
+							class="rounded"
+							src="resources/img/product/shortcut/new-brand.png"
+							alt=""
+							width="100%"
+						/>
+						<div class="content-shortcut rounded">
+							<h4>New Arrival</h4>
+							<h2>BST MỚI NHẤT</h2>
+						</div>
+					</a>
+				</div>
+				<p class="des-shortcut">Hàng Mới Về</p>
+			</div>
 
-            <div class="col-6 col-lg-3 p-0 pr-2">
-                <div class="img-shortcut">
-                    <a href="/best-seller">
-                        <img class="rounded" src="resources/img/product/shortcut/best-seller.png" alt="" width="100%">
-                        <div class="content-shortcut rounded">
-                            <h1>BEST SELLER</h1>
-                            <h4>Khách hàng tin dùng</h4>
-                        </div>
-                    </a>
-                </div>
-                <p class="des-shortcut">Thịnh Hành</p>
-            </div>
+			<div class="col-6 col-lg-3 p-0 pr-2 px-lg-1">
+				<div class="img-shortcut">
+					<a href="big-sale">
+						<img
+							class="rounded"
+							src="resources/img/product/shortcut/sale.png"
+							alt=""
+							width="100%"
+						/>
+						<div class="content-shortcut rounded">
+							<h4>Ưu đãi lên đến hơn</h4>
+							<h1>30%</h1>
+						</div>
+					</a>
+				</div>
+				<p class="des-shortcut">Giảm Giá Sốc</p>
+			</div>
 
-            <div class="col-6 col-lg-3 p-0 pl-2 px-lg-1">
-                <div class="img-shortcut">
-                    <a href="/new-arrival">
-                        <img class="rounded" src="resources/img/product/shortcut/new-brand.png" alt="" width="100%">
-                        <div class="content-shortcut rounded">
-                            <h4>New Arrival</h4>
-                            <h2>BST MỚI NHẤT</h2>
-                        </div>
-                    </a>
-                </div>
-                <p class="des-shortcut">Hàng Mới Về</p>
-            </div>
+			<div class="col-6 col-lg-3 p-0 pl-2">
+				<div class="img-shortcut">
+					<a href="combo-box">
+						<img
+							class="rounded"
+							src="resources/img/product/shortcut/box.png"
+							alt=""
+							width="100%"
+						/>
+						<div class="content-shortcut rounded">
+							<h4>Combo Box</h4>
+							<h1>Tiết kiệm</h1>
+							<h5>Khách hàng tin dùng</h5>
+						</div>
+					</a>
+				</div>
+				<p class="des-shortcut">Combo Box</p>
+			</div>
+		</div>
+	</div>
+	<hr />
 
-            <div class="col-6 col-lg-3 p-0 pr-2 px-lg-1">
-                <div class="img-shortcut">
-                    <a href="big-sale">
-                        <img class="rounded" src="resources/img/product/shortcut/sale.png" alt="" width="100%">
-                        <div class="content-shortcut rounded">
-                            <h4>Ưu đãi lên đến hơn</h4>
-                            <h1>30%</h1>
+	<div class="secsion-top-product">
+		<h3 class="text-center py-4" style="color: #283657; font-weight: bold">
+			SẢN PHẨM NỔI BẬT
+		</h3>
 
-                        </div>
-                    </a>
-                </div>
-                <p class="des-shortcut">Giảm Giá Sốc</p>
-            </div>
+		<div id="carouselId" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+					<div class="row">
+						{{#each data.[0]}}
+						<div class="col-6 col-lg-3 item-product">
+							<a href="#">
+								<img
+									class="mb-2"
+									src="{{ this.imageThumbnail }}"
+									alt="1"
+									width="100%;"
+								/>
+							</a>
 
-            <div class="col-6 col-lg-3 p-0 pl-2">
-                <div class="img-shortcut">
-                    <a href="combo-box">
-                        <img class="rounded" src="resources/img/product/shortcut/box.png" alt="" width="100%">
-                        <div class="content-shortcut rounded">
-                            <h4>Combo Box</h4>
-                            <h1>Tiết kiệm</h1>
-                            <h5>Khách hàng tin dùng</h5>
-                        </div>
-                    </a>
-                </div>
-                <p class="des-shortcut">Combo Box</p>
-            </div>
+							<a href="#" class="name">
+								{{ this.name }}
+							</a>
+							<p class="price">{{ this.price }}đ</p>
+						</div>
+						{{/each}}
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						{{#each data.[1]}}
+						<div class="col-6 col-lg-3 item-product">
+							<a href="#">
+								<img
+									class="mb-2"
+									src="{{ this.imageThumbnail }}"
+									alt="1"
+									width="100%;"
+								/>
+							</a>
 
-        </div>
-    </div>
-    <hr>
+							<a href="#" class="name">
+								{{ this.name }}
+							</a>
+							<p class="price">{{ this.price }}đ</p>
+						</div>
+						{{/each}}
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						{{#each data.[2]}}
+						<div class="col-6 col-lg-3 item-product">
+							<a href="#">
+								<img
+									class="mb-2"
+									src="{{ this.imageThumbnail }}"
+									alt="1"
+									width="100%;"
+								/>
+							</a>
 
-    <div class="secsion-top-product">
-        <h3 class="text-center  py-4" style="color: #283657; font-weight: bold;">SẢN PHẨM NỔI BẬT</h3>
-
-        <div id="carouselId" class="carousel slide" data-ride="carousel">
-
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <div class="row">
-
-                        {{#each data[0]}}
-                        <div class="col-6 col-lg-3 item-product">
-                            <a href="#">
-                                <img class="mb-2" src="{{this.imageThumbnail}}" alt="1" width="100%;">
-                            </a>
-
-                            <a href="#" class="name">
-                                {{this.name}}
-                            </a>
-                            <p class="price">{{this.price}}đ</p>
-                        </div>
-                        {{/each}}
-
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-
-                        {{#each data[1]}}
-                        <div class="col-6 col-lg-3 item-product">
-                            <a href="#">
-                                <img class="mb-2" src="{{this.imageThumbnail}}" alt="1" width="100%;">
-                            </a>
-
-                            <a href="#" class="name">
-                                {{this.name}}
-                            </a>
-                            <p class="price">{{this.price}}đ</p>
-                        </div>
-                        {{/each}}
-
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-
-                        {{#each data[2]}}
-                        <div class="col-6 col-lg-3 item-product">
-                            <a href="#">
-                                <img class="mb-2" src="{{this.imageThumbnail}}" alt="1" width="100%;">
-                            </a>
-
-                            <a href="#" class="name">
-                                {{this.name}}
-                            </a>
-                            <p class="price">{{this.price}}đ</p>
-                        </div>
-                        {{/each}}
-
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-
+							<a href="#" class="name">
+								{{ this.name }}
+							</a>
+							<p class="price">{{ this.price }}đ</p>
+						</div>
+						{{/each}}
+					</div>
+				</div>
+			</div>
+			<a
+				class="carousel-control-prev"
+				href="#carouselId"
+				role="button"
+				data-slide="prev"
+			>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a
+				class="carousel-control-next"
+				href="#carouselId"
+				role="button"
+				data-slide="next"
+			>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
 </div>
