Complete Index & Category With HandleBar

--- a/Views/Partials/header.hbs
+++ b/Views/Partials/header.hbs
@@ -41,7 +41,7 @@
             <div class="nav-link-menu">
                 <ul>
                     <li class="nav-link" id="sales" style="--i: 0.5s">
-                        <a href="/sales">SALES</a>
+                        <a href="/list-product/sales">SALES</a>
                     </li>
                     <li class="nav-link" style="--i: 0.6s">
                         <a href="#">
@@ -55,16 +55,16 @@
                         <div class="dropdown">
                             <ul class="list-unstyled">
                                 <li class="drop-link">
-                                    <a href="/ao-thun-ngan-tay">Áo thun ngắn tay</a>
+                                    <a href="/list-product?category=ao-thun-ngan-tay">Áo thun ngắn tay</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/ao-thun-dai-tay">Áo thun dài tay</a>
+                                    <a href="/list-product?category=ao-thun-dai-tay">Áo thun dài tay</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/ao-thun-tank-top">Áo thun tank top</a>
+                                    <a href="/list-product?category=ao-thun-tank-top">Áo thun tank top</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/ao-somi">Áo sơ mi</a>
+                                    <a href="/list-product?category=ao-somi">Áo sơ mi</a>
                                 </li>
                                 <div class="arrow-menu"></div>
                             </ul>
@@ -82,16 +82,16 @@
                         <div class="dropdown">
                             <ul class="list-unstyled">
                                 <li class="drop-link">
-                                    <a href="/quan-short">Quần short</a>
+                                    <a href="/list-product?category=quan-short">Quần short</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/quan-jean-dai">Quần jean dài</a>
+                                    <a href="/list-product?category=quan-jean-dai">Quần jean dài</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/quan-kaki-dai">Quần kaki dài</a>
+                                    <a href="/list-product?category=quan-kaki-dai">Quần kaki dài</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/quan-jogger">Quần jogger</a>
+                                    <a href="/list-product?category=quan-jogger">Quần jogger</a>
                                 </li>
                                 <div class="arrow-menu"></div>
                             </ul>
@@ -109,10 +109,10 @@
                         <div class="dropdown">
                             <ul class="list-unstyled">
                                 <li class="drop-link">
-                                    <a href="/vo-ngan">Vớ ngắn</a>
+                                    <a href="/list-product?category=vo-ngan">Vớ ngắn</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/vo-dai">Vớ cổ cao</a>
+                                    <a href="/list-product?category=vo-dai">Vớ cổ cao</a>
                                 </li>
                                 <div class="arrow-menu"></div>
                             </ul>
@@ -130,16 +130,16 @@
                         <div class="dropdown">
                             <ul class="list-unstyled">
                                 <li class="drop-link">
-                                    <a href="/that-lung">Thăt lưng, dây nịt</a>
+                                    <a href="/list-product?category=that-lung">Thăt lưng, dây nịt</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/bop">Bóp ví</a>
+                                    <a href="/list-product?category=bop">Bóp ví</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/khau-trang">Khẩu trang</a>
+                                    <a href="/list-product?category=khau-trang">Khẩu trang</a>
                                 </li>
                                 <li class="drop-link">
-                                    <a href="/non">Nón</a>
+                                    <a href="/list-product?category=non">Nón</a>
                                 </li>
                                 <div class="arrow-menu"></div>
                             </ul>
