add href for index

--- a/Views/index.hbs
+++ b/Views/index.hbs
@@ -74,11 +74,11 @@
 					<div class="row">
 						{{#each data.[0]}}
 						<div class="col-6 col-lg-3 item-product">
-							<a href="#">
+							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
 							</a>
 
-							<a href="#" class="name">
+							<a href="/list-product/item?id={{this.id}}" class="name">
 								{{ this.name }}
 							</a>
 							<p class="price">{{ this.price }}đ</p>
@@ -90,11 +90,11 @@
 					<div class="row">
 						{{#each data.[1]}}
 						<div class="col-6 col-lg-3 item-product">
-							<a href="#">
+							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
 							</a>
 
-							<a href="#" class="name">
+							<a href="/list-product/item?id={{this.id}}" class="name">
 								{{ this.name }}
 							</a>
 							<p class="price">{{ this.price }}đ</p>
@@ -106,11 +106,11 @@
 					<div class="row">
 						{{#each data.[2]}}
 						<div class="col-6 col-lg-3 item-product">
-							<a href="#">
+							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
 							</a>
 
-							<a href="#" class="name">
+							<a href="/list-product/item?id={{this.id}}" class="name">
 								{{ this.name }}
 							</a>
 							<p class="price">{{ this.price }}đ</p>
