--- a/views/list-product.hbs
+++ b/views/list-product.hbs
@@ -30,15 +30,15 @@
                     <img src="{{this.imageThumbnail}}" alt="5" width="100%;">
                 </a>
                 <div class="des-product">
-                    <a href="/list-product/item?item={{this.id}}" class="name">
+                    <a href="/list-product/item?id={{this.id}}" class="name">
                         {{this.name}}
                     </a>
                     <br>
-                    <a href="/list-product/item/rate?item={{this.id}}" class="rate">(Xem đánh giá)</a>
+                    <a href="/list-product/item/rate?id={{this.id}}" class="rate">(Xem đánh giá)</a>
                     <p class="price">{{this.price}}đ</p>
                 </div>
                 <div class="buy">
-                    <a name="" id="" class="btn" href="/list-product/item/buy?item={{this.id}}" role="button">Chọn
+                    <a name="" id="" class="btn" href="/list-product/item/buy?id={{this.id}}" role="button">Chọn
                         mua</a>
                 </div>
             </div>
